v0.2.0,   2022-05-19 -- add basic support for command-line plots of STARS output
v0.1.0,   2022-03-31 -- removed old procedural functions
          2021-06-15 -- added 'unique' option to `tomso plot --legend`
          2021-01-08 -- extend MESAAsteroSamples slicing to handle NumPy ints,
                        lists or arrays of bools or ints
v0.0.12,  2020-12-11 -- overhauled docs
          2020-12-01 -- rewrite MESA astero sample functions as extensions of
                        dict and list
          2020-10-24 -- refactor BaseStellarModel into AdiabaticStellarModel
                        and FullStellarModel
          2020-09-29 -- rename `enn` and `ell` to `n` and `l` in ADIPLS
          2020-09-04 -- added `info` function to script
          2020-08-27 -- FGONG adheres more closely to formats impled by ivers
                     -- refactored common stellar models to extend new class
                        BaseStellarModel
          2020-08-23 -- add `regularize` decorator to suppress warnings at
                     -- centres of stellar models
          2020-08-14 -- started implementing __repr__ and __str__
          2020-08-07 -- add new functions for loading MESA/astero samples
          2020-07-29 -- rename `common` to `utils`
          2020-07-26 -- where implemented, functions return objects by default
          2020-07-22 -- tomso_open now handles URLs
          2020-07-20 -- added constants module and Teff property to FGONG and
                        and GYRE models
v0.0.11,  2020-02-04 -- added script to convert between stellar model types
          2019-10-16 -- added classes to FGONG, GYRE and ADIPLS modules as well
                        as tests that currently run alongside old functions
v0.0.10,  2019-08-01 -- added `prune` keyword to `mesa.load_history` to force a
                        strictly increasing model number by only taking last
                        model of any given model number